imvirt (0.9.3) unstable; urgency=low

  * Add ARAnyM detection support.
  * Reduce perl warnings.
  * Use File::Which if available (no shell used to execute binaries).
  * Take only used virtio kernel modules into account.
  * Improve imvirt.spec.in (thanks to Miroslav Suchý <msuchy@redhat.com>).
  * Don't call lspci unless /proc/bus/pci is available.

 -- Thomas Liske <liske@ibh.de>  

imvirt (0.9.2) unstable; urgency=low

  * Improve overall detection.
  * Improve debug output.
  * Add INSTALLDIRS=vendor to be conform to the Debian perl policy.
    (Debian Bug #578798 by Niko Tyni <ntyni@debian.org>)
  * Update to automake 1.11.1.

 -- Thomas Liske <liske@ibh.de>  Sat, 04 Feb 2012 17:52:45 +0100

imvirt (0.9.1) unstable; urgency=low

  * Output possible result lines on help output.
  * Don't die in Utils/pcidevs.pm if lspci is not available.
    (Closes Debian Bug#612735 by Stefan Bühler)
  * Parse new kernel paravirtualization lines (KVM, VMware).
  * Improve KVM w/ virtio detection.
  * Improve KVM/QUEMU detection.
    (Contributed by Mike Gerber <mike@sprachgewalt.de>)
  * Add basic lguest detection support.
  * Improve debugging of legacy imvirt script.

 -- Thomas Liske <liske@ibh.de>  Thu, 02 Jun 2011 21:50:55 +0200

imvirt (0.9.0) unstable; urgency=low

  * Rewrite imvirt as a perl module framework.
  * Detection changed from "first best match" to a weighted
    characteristics aproach.
  * Add legacy replacement script 'imvirt' as a replacement
    for the old monolitic script.

 -- Thomas Liske <liske@ibh.de>  Mon, 29 Mar 2010 19:55:14 +0200

imvirt (0.3.3) unstable; urgency=low

  * Make modern GCC versions stop warning about breaking
    strict-aliasing checking.
  * Add imvirt.spec.in.

 -- Thomas Liske <liske@ibh.de>  Sat, 13 Feb 2010 00:26:54 +0100

imvirt (0.3.2) unstable; urgency=low

  * Handle SIGILL on amd64 for Xen PV detection gracefully.
     reported by Patrick Matthäi <patrick.matthaei@web.de>