@@ -1,11 +1,13 @@
 imvirt (0.9.3) unstable; urgency=low
 
   * Add ARAnyM detection support.
+  * Add LXC detection support.
   * Reduce perl warnings.
   * Use File::Which if available (no shell used to execute binaries).
   * Take only used virtio kernel modules into account.
   * Improve imvirt.spec.in (thanks to Miroslav Suchý <msuchy@redhat.com>).
   * Don't call lspci unless /proc/bus/pci is available.
+  * Add imvirt-report binary.
 
  -- Thomas Liske <liske@ibh.de>  
 
